force-app/main/default/objects/MC4SF__MC_Interest_Group__c/MC4SF__MC_Interest_Group__c.object-meta.xml
<CustomObject>
    <label>MC Interest Group</label>
    <nameField>
        <label>Interest Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MC Interest Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>