force-app/main/default/objects/MC4SF__MC_Interest_Group__c/fields/MC4SF__Bit__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__Bit__c</fullName>
    <label>Bit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>