force-app/main/default/objects/MC4SF__MC_Interest_Group__c/fields/MC4SF__Deleted_In_MailChimp__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__Deleted_In_MailChimp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deleted In MailChimp</label>
    <type>Checkbox</type>
</CustomField>