force-app/main/default/objects/MC4SF__MC_Interest_Group__c/fields/MC4SF__MC_Interest_Grouping__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__MC_Interest_Grouping__c</fullName>
    <label>MC Interest Grouping</label>
    <referenceTo>MC4SF__MC_Interest_Grouping__c</referenceTo>
    <relationshipLabel>MC Interest Groups</relationshipLabel>
    <relationshipName>MC_Interest_Groups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>