force-app/main/default/objects/MC4SF__MC_Interest_Group__c/fields/MC4SF__Subscribers__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__Subscribers__c</fullName>
    <label>Subscribers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>